--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.4.1"
+    "recoil": "^0.4.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
