--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css,scss}'"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
