--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.21",
     "recoil": "^0.4.1",
     "swr": "^1.0.1"
   },
