--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-responsive-carousel": "^3.2.21",
     "recoil": "^0.4.1",
     "swr": "^1.0.1"
